--- a/lab06-2/6.3/webpage2/style.css
+++ b/lab06-2/6.3/webpage2/style.css
@@ -1,25 +1,24 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-family: arial;
+    margin: 0;
+    padding: 0;
+    font-family: arial;
 }
 
 body {
-	background-color: #fcecdd;
+    background-color: #fcecdd;
 }
 
 /*header*/
 .header {
-	background-image: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url(images/banner.jpg);
-	height: 450px;
-	background-position: center;
-	background-size: cover;
-	background-attachment: fixed;
-	position: relative;
+    background-image: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url(images/banner.jpg);
+    height: 450px;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 .navbar {
     width: 90%;
-    padding: 12px 81px;
+    padding: 12px 5%;
     position: fixed;
     background-color: #a98585c9;
     z-index: 3;
@@ -37,11 +36,11 @@ body {
     float: right;
 }
 .right .items .nav-item {
-	text-decoration: none;
-	color: white;
-	font-size: 20px;
-	margin-left: 25px;
-	transition: 0.3s;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    margin-left: 25px;
+    transition: 0.3s;
 }
 .right .items a.nav-item:hover {
     color: orange;
@@ -66,8 +65,8 @@ a.nav-item.sign-in:hover {
 .banner{
     position: absolute;
     z-index: 2;
-    top: 30%;
-    left: 37%;
+    top: 20%;
+    width: 100%;
     text-align: center;
     color: white;
 }
@@ -82,14 +81,14 @@ p.infomation {
 
 /*slidebar*/
 .slidebar {
-	width: 20%;
-	position: absolute;
-	top: 540px;
-	left: 22px;
-	border: 3px solid #fea82f;
-	border-radius: 28px;
-	padding: 12px;
-	background-color: #f0e3ca;
+    width: 20%;
+    float: left;
+    box-sizing: border-box;
+    border: 3px solid #fea82f;
+    margin-top: 10%;
+    border-radius: 28px;
+    padding-top: 1%;
+    background-color: #f0e3ca;
 }
 .list {
     list-style-type: none;
@@ -116,9 +115,7 @@ a.listitem:hover li {background-color: #ffc288;}
 /*main*/
 .main {
     width: 77%;
-    position: absolute;
-    top: 460px;
-    right: 0px;
+    float: right;
 }
 .row {}
 .row .product {
@@ -133,7 +130,7 @@ a.listitem:hover li {background-color: #ffc288;}
     box-shadow: 3px 3px 3px 3px gray;
 }
 .product:hover a {
-	background-color: #ffc996;
+    background-color: #ffc996;
 }
 .row .product img {
     width: 100%;
@@ -151,8 +148,7 @@ a.view:hover {
 
 /*footer*/
 .footer {
-    position: absolute;
-    top: 1450px;
+    float: left;
     background: white;
     width: 100%;
     text-align: center;
@@ -163,16 +159,14 @@ a.view:hover {
 }
 
 .get-in-touch:after {
-	content: '';
-	width: 50px;
-	height: 3px;
-	background-color: #F4623A;
-	display: block;
-	margin-left: -25px;
-	left: 50%;
-	bottom:0;
-	position: absolute;
-	top: 130px;
+    content: '';
+    width: 50px;
+    height: 3px;
+    background-color: #F4623A;
+    display: block;
+    margin-left: -25px;
+    left: 50%;
+    position: absolute;
 }
 .footer .contact {
     margin: 50px;
@@ -180,4 +174,24 @@ a.view:hover {
 .footer .contact img {}
 .footer .contact p {
     font-size: 29px;
+}
+
+@media (max-width: 1200px) {
+    h1.big-title{
+        font-size: 35px;
+    }
+    .footer .get-in-touch{
+        font-size: 35px;
+    }
+    .row .product{
+        width: 45%;
+        margin-left: 1%;
+    }
+    .left .brand{font-size: 17px}
+    .right .items .nav-item{
+        font-size: 16px;
+    }
+    .slidebar{border-radius: 3px}
+    .slidebar .listitem{font-size: 15px}
+    .slidebar .listitem.bigger{font-size: 16px}
 }
